--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   "author": "dev",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.28.0",
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
+    "twilio": "^5.10.4",
     "uuid": "^13.0.0"
   }
 }
